# starter-project

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  conanfile.txt
app/: CMakeLists.txt  main.cpp
cmake/: CompilerWarnings.cmake  Conan.cmake
include/starter_project/: mylib.h
src/: CMakeLists.txt  mylib.cpp
tests/: CMakeLists.txt  libtest.cpp
